<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CDCDCD"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"    
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:background="#474747" >
    </LinearLayout>       
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/main_title_header"
        android:textColor="#A3A3A3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="27dp"
        android:onClick="callFindMyCar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/title_button_find_carby_plate"
        android:textSize="16sp" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignRight="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="33dp"
        android:onClick="exit"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/exit"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="38dp"
        android:onClick="callFindEmptySlots"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/title_button_find_slots"
        android:textSize="16sp" />

</RelativeLayout>



 